# llmdev

./: helloWorld.ipynb
02_python/: task01.ipynb  task02.ipynb  task03.ipynb  task04.ipynb
03_collections/: task01.ipynb  task02.ipynb  todo.ipynb
04_function/: task01.ipynb  task02.ipynb
05_oop/: task01.ipynb
06_test/: test_authenticator.py
08_htmlcss/: task02.html
10_llmbasic/: task01.ipynb
11_tool/: search.ipynb
14_rag/: task01.ipynb
15_langchain/: task01.ipynb
16_llmapp/original/backend/: .env.example  pyproject.toml
16_llmapp/original/backend/alembic/: env.py
16_llmapp/original/backend/alembic/versions/: 41ed7a57284c_initial_schema.py  884be0f53f6c_schema_v2_settings_and_content_json.py
16_llmapp/original/backend/app/: main.py
16_llmapp/original/backend/app/api/: auth.py  reviews.py
16_llmapp/original/backend/app/core/: config.py  database.py  exceptions.py  security.py
16_llmapp/original/backend/app/models/: __init__.py  review.py  user.py
16_llmapp/original/backend/app/schemas/: auth.py  reviews.py
16_llmapp/original/backend/app/services/: llm.py  prompts.py
16_llmapp/original/frontend/: eslint.config.js  index.html  package-lock.json  package.json
16_llmapp/original/frontend/src/: App.tsx  index.css  main.tsx
16_llmapp/original/frontend/src/components/: ActionBar.tsx  AppHeader.tsx  CodeEditor.tsx  ConfirmModal.tsx  DiffPanel.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  GenerationStatus.tsx  HistorySidebar.tsx  HunkCard.tsx  IssueCard.tsx  IssuesPanel.tsx  ProtectedRoute.tsx  ReviewSettingsPanel.tsx  (+4 more)
(+32 files in other folders)
